# TLE-tg

./: pyproject.toml  run.sh
tle/: __main__.py  telegram_main.py
tle/tg/: commands.py  standings.py
tle/util/: discord_common.py  handle_logic.py  help.py  telegram_common.py
