[project]
name = "TLE"
version = "0.1.0"
requires-python = ">= 3.9"
dependencies = [
  # Discord bot core
  "discord.py == 2.3.2",
  "aiohttp >= 3.9, < 3.13",
  "aiocache",
  # Data & plotting
  "numpy",
  "pandas",
  "matplotlib",
  "seaborn",
  # Images
  "pillow",
  "aiogram==3.22.0",
]

[project.optional-dependencies]
test = [
  "pytest",
]
